JumpScript/tests/baselines/reference/nestedBlockScopedBindings8.errors.txt
tests/cases/compiler/nestedBlockScopedBindings8.jump(3,5): error TS7027: Unreachable code detected.
tests/cases/compiler/nestedBlockScopedBindings8.jump(8,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/nestedBlockScopedBindings8.jump (2 errors) ====
    var x;
    for (let x; false; ) {
        () => x;
        ~
!!! error TS7027: Unreachable code detected.
    }
    
    var y;
    for (let y; false; ) {
        y = 1;
        ~
!!! error TS7027: Unreachable code detected.
    }